# subspace-lattice

./: .env.example  .firebaserc  .gitignore  AGENTS.md  README.md  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  nx.json  package.json  tsconfig.base.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  Entitlements.AppStore.plist.in  Entitlements.plist  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: apple-siwa.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  oauth_server.rs
assets/: AllRoundGothicXligWoff2_base64.txt  SolProRegularWoff2_base64.txt  Subspace Lattice.indd  SubspaceLattice-1-1.ai  SubspaceLattice-lg-x.ai  SubspaceLattice-lg.ai  SubspaceLattice-ms-1080x1080.ai  SubspaceLattice-ms-1440x2160.ai  SubspaceLattice-ms-150x150.ai  SubspaceLattice-ms-1920x1080-hero.ai  SubspaceLattice-ms-1920x1080.ai  SubspaceLattice-ms-300x300.ai  SubspaceLattice-ms-584x800.ai  SubspaceLattice-ms-71x71.ai  SubspaceLattice-ms-720x1080.ai  SubspaceLattice-text-plain.ai  SubspaceLattice-text.ai  SubspaceLattice.ai
docs/: ROADMAP.md  desktop-build.md  game-viability-testing.md  player-overview.md  playtest-fleet-checklist.md  rules.tex  rules.tex.sha256
scripts/: app-version.mjs  build-all.sh  build-android.sh  build-ios-appstore.sh  build-macos-appstore.sh  build-macos.sh  build-rules.sh  build-windows-crosscompile.sh  build-windows-store.ps1  build-windows.ps1  deploy-firebase.sh  ensure-functions-public-invoker.sh  ensure-tauri-cli-links.sh  init-desktop.sh  sync-ios-icons.sh  (+9 more)
(+40 files in other folders)
