[package]
name = "subspacelattice"
version = "0.1.6"
description = "Subspace Lattice desktop client"
authors = ["Digital Defiance"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
tauri-plugin-siwa = "1.0.0"
